--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
           </div>
 
           <div class="socials">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a
+              href="http://t.me/DonaldVanTrumpOfficial"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img src="/source/tel.webp" alt="" />
             </a>
 
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a
+              href="http://x.com/astrofolioOnSol"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img src="/source/twitter.webp" alt="" />
             </a>
 
