--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </a>
 
             <a
-              href="http://x.com/astrofolioOnSol"
+              href="http://x.com"
               target="_blank"
               rel="noopener noreferrer"
             >
